--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -122,54 +122,57 @@
         </div>
       </div>
     </div>
-    <br>
+
+  </div>
+</div>
+<br>
 
 
 
-    <div class="col-md-8 col-center m-auto">
-      <h2>{{ 'homepage.what_our_clients_say' | translate }}</h2>
-      <div id="myCarousel" class="carousel slide" data-ride="carousel">
-        <!-- Carousel indicators -->
-        <ol class="carousel-indicators">
-          <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-          <li data-target="#myCarousel" data-slide-to="1"></li>
-          <li data-target="#myCarousel" data-slide-to="2"></li>
-        </ol>
-        <!-- Wrapper for carousel items -->
-        <div class="carousel-inner">
-          <div class="item carousel-item active">
-            <div class="img-box">
-              <img src="../../../assets/Body/PM_Modi_2015.jpg" alt="">
-            </div>
-            <p class="testimonial">We should not forget what was the state of grain production in the country after attaining independence. Our “annadata” has brought us out of the crisis. The country today has a record grain production, record dal, fruit, vegetables and milk production.</p>
-            <p class="overview">
-              <b>Narendra Modi</b>, Prime Minister of India</p>
-          </div>
-          <div class="item carousel-item">
-            <div class="img-box">
-              <img src="../../../assets/Body/fresh.jpg" alt="">
-            </div>
-            <p class="testimonial">The diet, to be healthy, has to be mostly fruits, vegetables, beans, nuts and seeds.</p>
-            <p class="overview">
-              <b>Joel Fuhrman</b>, American celebrity doctor</p>
-          </div>
-          <div class="item carousel-item">
-            <div class="img-box">
-              <img src="../../../assets/Body/us.jpg" alt="">
-            </div>
-            <p class="testimonial">Cultivators of the Earth are the most virtuous and independent citizens.</p>
-            <p class="overview">
-              <b>Thomas Jefferson</b>, 3rd President of the United States</p>
-          </div>
+<div class="col-md-8 col-center m-auto">
+  <h2>{{ 'homepage.what_our_clients_say' | translate }}</h2>
+  <div id="myCarousel" class="carousel slide" data-ride="carousel">
+    <!-- Carousel indicators -->
+    <ol class="carousel-indicators">
+      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+      <li data-target="#myCarousel" data-slide-to="1"></li>
+      <li data-target="#myCarousel" data-slide-to="2"></li>
+    </ol>
+    <!-- Wrapper for carousel items -->
+    <div class="carousel-inner">
+      <div class="item carousel-item active">
+        <div class="img-box">
+          <img src="../../../assets/Body/PM_Modi_2015.jpg" alt="">
         </div>
-        <!-- Carousel controls -->
-        <a class="carousel-control left carousel-control-prev" href="#myCarousel" data-slide="prev">
-          <i class="fa fa-angle-left"></i>
-        </a>
-        <a class="carousel-control right carousel-control-next" href="#myCarousel" data-slide="next">
-          <i class="fa fa-angle-right"></i>
-        </a>
+        <p class="testimonial">We should not forget what was the state of grain production in the country after attaining independence. Our “annadata”
+          has brought us out of the crisis. The country today has a record grain production, record dal, fruit, vegetables
+          and milk production.</p>
+        <p class="overview">
+          <b>Narendra Modi</b>, Prime Minister of India</p>
+      </div>
+      <div class="item carousel-item">
+        <div class="img-box">
+          <img src="../../../assets/Body/fresh.jpg" alt="">
+        </div>
+        <p class="testimonial">The diet, to be healthy, has to be mostly fruits, vegetables, beans, nuts and seeds.</p>
+        <p class="overview">
+          <b>Joel Fuhrman</b>, American celebrity doctor</p>
+      </div>
+      <div class="item carousel-item">
+        <div class="img-box">
+          <img src="../../../assets/Body/us.jpg" alt="">
+        </div>
+        <p class="testimonial">Cultivators of the Earth are the most virtuous and independent citizens.</p>
+        <p class="overview">
+          <b>Thomas Jefferson</b>, 3rd President of the United States</p>
       </div>
     </div>
+    <!-- Carousel controls -->
+    <a class="carousel-control left carousel-control-prev" href="#myCarousel" data-slide="prev">
+      <i class="fa fa-angle-left"></i>
+    </a>
+    <a class="carousel-control right carousel-control-next" href="#myCarousel" data-slide="next">
+      <i class="fa fa-angle-right"></i>
+    </a>
   </div>
 </div>
