--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,5 +1,5 @@
 <!--Footer-->
-<footer id="myFooter" class="mt-5">
+<!-- <footer id="myFooter" class="mt-5">
   <div>
     <div class="row">
       <div class="col-sm-3">
@@ -72,5 +72,70 @@
   <div class="footer-copyright">
     <p>© 2018 {{ 'footer.kisan_ki_dukan' | translate }}</p>
   </div>
-</footer>
+</footer> -->
 <!--/.Footer-->
+<!-- footer -->
+<div class="footer-bot">
+  <div class="w3layouts-newsletter">
+    <div class="w3ls-social-icons-2">
+      <h3>Connect With Us On Social</h3>
+      <a class="facebook" href="#">
+        <i class="fa fa-facebook"></i>
+      </a>
+      <a class="twitter" href="#">
+        <i class="fa fa-twitter"></i>
+      </a>
+      <a class="pinterest" href="#">
+        <i class="fa fa-google-plus"></i>
+      </a>
+      <a class="linkedin" href="#">
+        <i class="fa fa-linkedin"></i>
+      </a>
+    </div>
+    <div class="col-md-7 agileinfo-newsletter">
+      <h3>
+        <i class="fa fa-envelope" aria-hidden="true"></i>Join our Newsletter</h3>
+      <form action="#" method="post">
+        <input type="email" placeholder="Enter Your Email" name="email" required="">
+        <input type="submit" value="Subscribe">
+      </form>
+    </div>
+    <div class="clearfix"> </div>
+  </div>
+  <div class="container">
+    <div class="col-xs-3 logo2">
+      <h2>
+        <a>
+          <img src="../../../assets/Header/kkd_logo.png" class="mt-4 ml-5 foot-logo" width="120" height="120" alt="KKD Logo">
+        </a>
+      </h2>
+    </div>
+    <div class="col-xs-9 ftr-menu">
+      <ul>
+        <li>
+          <a routerLink="/home">Home</a>
+        </li>
+        <li>
+          <a routerLink="/about">About</a>
+        </li>
+        <li>
+          <a routerLink="/policies">Policies</a>
+        </li>
+        <li>
+          <a routerLink="/help">Help</a>
+        </li>
+        <li>
+          <a routerLink="/support">Support</a>
+        </li>
+        <li>
+          <a routerLink="/connect">Contact Us</a>
+        </li>
+      </ul>
+    </div>
+    <div class="clearfix"></div>
+    <div class="copy-right">
+      <p> &copy; 2018 Kisan Ki Dukan. All Rights Reserved</p>
+    </div>
+  </div>
+</div>
+<!-- //footer -->
