--- a/src/app/customer/component/customer-login/customer-login.component.css
+++ b/src/app/customer/component/customer-login/customer-login.component.css
@@ -23,15 +23,13 @@ button{
     margin-bottom: 20px;
 }
 h1 {
-    font-weight: bolder;
-    font-family: sans-serif;
+    font-weight: 400;
+    font-family: 'Roboto' sans-serif;
     padding: 0.5em 0 40px 0;
     text-align: center;
     margin: 0;
-  color: #29a745;
-    font-size: 50px;
+    color: #29a745;
     line-height: 42px;
-    text-shadow: 0 1px rgb(255, 255, 255), 0 3px rgb(119, 119, 119);
     }
 @keyframes alertAnim {
     from {
