--- a/src/app/farmer/component/farmer-authentication-authorization/farmer-register/farmer-register.component.css
+++ b/src/app/farmer/component/farmer-authentication-authorization/farmer-register/farmer-register.component.css
@@ -17,15 +17,13 @@
     animation: 2s alertAnim forwards;
 }
 h1 {
-    font-weight: normal;
+    font-weight: 400;
     font-family: 'Roboto', sans-serif;
     padding: 0.5em 0 40px 0;
     text-align: center;
     margin: 0;
-    color: #4b5320;
-    font-size: 50px;
+    color: #29a745;
     line-height: 42px;
-    text-shadow: 0 2px white, 0 3px #777;
     }
 
 
