--- a/src/app/shared/help/help.component.css
+++ b/src/app/shared/help/help.component.css
@@ -21,13 +21,11 @@ a{
 }
 
 h1 {
-    font-weight: normal;
+    font-weight: 400;
     font-family: 'Roboto', sans-serif;
     padding: 0.5em 0 40px 0;
     text-align: center;
     margin: 0;
-    color: #4b5320;
-    font-size: 50px;
+    color: #458839;
     line-height: 42px;
-    text-shadow: 0 2px white, 0 3px #777;
     }
