--- a/src/app/shared/support/support.component.css
+++ b/src/app/shared/support/support.component.css
@@ -4,15 +4,13 @@ form{
 }
 
 h1 {
-    font-weight: bolder;
-    font-family: sans-serif;
+    font-weight: 400;
+    font-family: 'Roboto', sans-serif;
     padding: 0.5em 0 40px 0;
     text-align: center;
     margin: 0;
-  color: #29a745;
-    font-size: 50px;
+    color: #29a745;
     line-height: 42px;
-    text-shadow: 0 1px rgb(255, 255, 255), 0 3px rgb(119, 119, 119);
     }
 
 /* h1{
@@ -31,11 +29,11 @@ h1 {
 .display-4{
     color : white;
     margin-top : -30px;
-    font-style: roboto;
+    font-style: Roboto;
 }
 
 .form-group{
-    font-style: roboto;
+    font-style: Roboto;
     width : 85%;
     margin : auto;
 }
