--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -4,7 +4,7 @@
 <div class="services" id="services">
   <div class="container">
 
-    <h2 class="sub-title">{{ 'homepage.why_choose_us' | translate }}</h2>
+    <h2>{{ 'homepage.why_choose_us' | translate }}</h2>
 
     <div class="banner-bottom-girds">
       <div class="row">
