--- a/src/app/shared/body/body.component.html
+++ b/src/app/shared/body/body.component.html
@@ -59,20 +59,12 @@
 <div class="banner-bottom-w3l" id="about">
   <div class="container">
 
-    <div class="title-div">
-      <h3 class="tittle">
-        <span>W</span>elcome
-      </h3>
-      <div class="tittle-style">
-      </div>
-      <p>ed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-        ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-    </div>
+      <h2>Welcome</h2>
     <div class="welcome-sub-wthree">
       <div class="row">
         <div class="col-md-5 banner_bottom_left">
           <h4>About
-            <span>Kisan Ki Dukan</span>
+            <span>K</span>isan <span>K</span>i <span>D</span>ukan
           </h4>
           <p>The project Kisan Ki Dukan(KKD) is the launch of trend that focuses on delivering goods 
             directly to the customer from the farm.</p> <p>As we know, it’s not fresh if it’s not from farm. 
@@ -81,7 +73,7 @@
               sell their goods and in a similar fashion the customers can request for goods from the 
               farmers based on their preferences of location or price and avail the quality raw goods 
               for their use.</p>
-          <h6 class="w3l-style">W3layouts</h6>
+          <h6 class="w3l-style">kkdonline.com</h6>
         </div>
         <!-- Stats-->
         <div class="col-md-7 stats-info-agile">
