--- a/src/app/shared/body/body.component.css
+++ b/src/app/shared/body/body.component.css
@@ -1,3 +1,25 @@
+h2 {
+	color: #333;
+	text-align: center;
+	text-transform: uppercase;
+	font-family: Roboto;
+	font-weight: 400;
+	position: relative;
+	margin: 60px 0 60px;
+}
+
+h2::after {
+	content: "";
+	width: 100px;
+	position: absolute;
+	margin: 0 auto;
+	height: 3px;
+	background: #8fbc54;
+	left: 0;
+	right: 0;
+	bottom: -10px;
+}
+
  .carousel-caption {
    bottom: 8rem;
    z-index: 10;
@@ -100,15 +122,15 @@ h3.tittle span {
 }
 h6.w3l-style {
   color: #56d25b;
-  font-size: 22px;
+  font-size: 16px;
   letter-spacing: 2px;
   font-weight: 600;
   position: absolute;
-  bottom: -37%;
+  bottom: -42%;
   transform: rotate(-90deg);
   -ms-transform: rotate(-90deg);
   -webkit-transform: rotate(-90deg);
-  left: -11.5%;
+  left: -13%;
 }
 .banner_bottom_left p {
   color: #888;
