--- a/src/app/shared/about-us/about-us.component.html
+++ b/src/app/shared/about-us/about-us.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid mt-100">
     <div class="row">
         <div class="col-md-12">
-          <h1> About Us </h1>
+          <h1> {{ 'about_us.about_us_heading' | translate }} </h1>
         </div>
     </div>
 
@@ -12,14 +12,14 @@
 
                 <div class="top card shadow">
                     <h5 class="card-header">
-                        Problem Statement
+                        {{ 'about_us.problem_statement' | translate }}
                     </h5>
                     <div class="card-block">
-                                <span>In the Global Market</span>
+                                <span>{{ 'about_us.in_the_global_market' | translate }}</span>
                             <ul class="card-text">
-                                <li>the actual price of the products is not prevalent in the supply chain.</li>
-                                <li>need of a platform for farmers to sell.</li>
-                                <li>their products at their convenient price. The customers do not get products from the farm owner.</li>
+                                <li>{{ 'about_us.problem_statement_description1' | translate }}</li>
+                                <li>{{ 'about_us.problem_statement_description2' | translate }}</li>
+                                <li>{{ 'about_us.problem_statement_description3' | translate }}</li>
                             </ul>
 
                       </div>
@@ -27,27 +27,26 @@
 
                 <div class="card shadow">
                     <h5 class="card-header">
-                        Project Definition
+                        {{ 'about_us.project_definition' | translate }}
                     </h5>
                     <div class="card-block">
                         <p class="card-text">
-                            The Project “Kisan Ki Dukan(KKD)” is the launch of trend that focuses on delivering goods directly to the customer from the farm.
+                            {{ 'about_us.project_definition_description1' | translate }}
                             </p>
                             <blockquote> <i>
-                            As we know, it’s not fresh if it’s not from farm.
+                                {{ 'about_us.project_definition_description2' | translate }}
                             </i>
                             </blockquote>
                             <p class="card-text">
-                            KKD is an online portal that facilitate farmers to offer an astonishing range of
-                            merchandise directly from their farm to every
+                                {{ 'about_us.project_definition_description3' | translate }}
                             </p>
                             <ul>
-                                <li>household</li>
-                                <li>restaurants</li>
-                                <li>hotels</li>
-                                <li>shops</li>
+                                <li>{{ 'about_us.project_definition_description4' | translate }}</li>
+                                <li>{{ 'about_us.project_definition_description5' | translate }}</li>
+                                <li>{{ 'about_us.project_definition_description6' | translate }}</li>
+                                <li>{{ 'about_us.project_definition_description7' | translate }}</li>
                             </ul>
-                            <p class="card-text">via electronically transferring information between farmer and customer.
+                            <p class="card-text">{{ 'about_us.project_definition_description8' | translate }}
                    </p>
                         </div>
                 </div>
@@ -55,19 +54,17 @@
 
                 <div class="card shadow">
                     <h5 class="card-header">
-                        Stakeholders
+                        {{ 'about_us.stakeholders' | translate }}
                     </h5>
                             <ul class="card-block">
                             <li>
-                            Farmers: By connecting the farmers directly with their customer and eliminating the middleman, KKD will help them to generate a
-                            greater profit.
+                                {{ 'about_us.stakeholders_description1' | translate }}
                             </li>
                             <li>
-                            Customers: The buyer will get their products directly from the farm. Hence they can be sure that the vegetables they are
-                            consuming are fresh and unadulterated.
+                                {{ 'about_us.stakeholders_description2' | translate }}
                             </li>
                             <li>
-                            Product Owner: We as the product developers and owners will provide a platform for the farmers and the customers to interact.
+                                {{ 'about_us.stakeholders_description3' | translate }}
                                 </li>
                         </ul>
                     </div>
@@ -75,53 +72,53 @@
 
                 <div class="card shadow">
                     <h5 class="card-header">
-                        Scope and Impact
+                        {{ 'about_us.scope_and_impact' | translate }}
                     </h5>
                     <div class="card-block">
-                            <span id = "heading">Scope</span>
+                            <span id = "heading">{{ 'about_us.scope' | translate }}</span>
 
                             <ul class="card-block card-text">
-                            <li>Small scale and large scale farmers</li>
-                            <li>Consumers of products</li>
+                            <li>{{ 'about_us.scope_description' | translate }}</li>
+                            <li>{{ 'about_us.scope_description1' | translate }}</li>
                             </ul>
-                            <span id = "heading">Impact</span>
+                            <span id = "heading">{{ 'about_us.Impact' | translate }}</span>
                             <ul class="card-block card-text">
-                            <li>Digitalization of supply chain </li>
-                            <li>Profitable Farmer </li>
-                            <li>On Demand Supply Management</li>
-                            <li>Eliminating multiple layers of Supply chain</li>
+                            <li>{{ 'about_us.impact_description1' | translate }}</li>
+                            <li>{{ 'about_us.impact_description2' | translate }} </li>
+                            <li>{{ 'about_us.impact_description3' | translate }}</li>
+                            <li>{{ 'about_us.impact_description4' | translate }}</li>
                             </ul>
                     </div>
                 </div>
 
                 <div class="card shadow">
                     <h5 class="card-header">
-                        Features
+                        {{ 'about_us.features' | translate }}
                     </h5>
                     <div class="card-block">
                             <ul class="card-block card-text">
-                                    <li>Ubiquity and Global market reach</li>
-                                    <li>Richness and Interactivity</li>
-                                    <li>Personalization</li>
-                                    <li>Reducing need of middlemen</li>
-                                    <li>Fresh products directly from the farm to customer’s doorstep</li>
+                                    <li>{{ 'about_us.features_description1' | translate }}</li>
+                                    <li>{{ 'about_us.features_description2' | translate }}</li>
+                                    <li>{{ 'about_us.features_description3' | translate }}</li>
+                                    <li>{{ 'about_us.features_description4' | translate }}</li>
+                                    <li>{{ 'about_us.features_description5' | translate }}</li>
                                     </ul>
                     </div>
                 </div>
 
                 <div class="card shadow">
                     <h5 class="card-header">
-                        Functionalities
+                        {{ 'about_us.functionalities' | translate }}
                     </h5>
                     <div class="card-block">
                         <ul class="card-block card-text">
-                                <li>One Step Registration with Mobile Number</li>
-                                <li>Search and sort variety of products</li>
-                                <li>Inventory management</li>
-                                <li>Simple checkout</li>
-                                <li>Order Management</li>
-                                <li>Review management</li>
-                                <li>Online payment or COD options</li>
+                                <li>{{ 'about_us.functionalities_description1' | translate }}</li>
+                                <li>{{ 'about_us.functionalities_description2' | translate }}</li>
+                                <li>{{ 'about_us.functionalities_description3' | translate }}</li>
+                                <li>{{ 'about_us.functionalities_description4' | translate }}</li>
+                                <li>{{ 'about_us.functionalities_description5' | translate }}</li>
+                                <li>{{ 'about_us.functionalities_description6' | translate }}</li>
+                                <li>{{ 'about_us.functionalities_description7' | translate }}</li>
                                 </ul>
 
                     </div>
