--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -116,7 +116,7 @@
           <a routerLink="/home">Home</a>
         </li>
         <li>
-          <a routerLink="/about">About</a>
+          <a routerLink="/about">About Us</a>
         </li>
         <li>
           <a routerLink="/policies">Policies</a>
@@ -134,7 +134,7 @@
     </div>
     <div class="clearfix"></div>
     <div class="copy-right">
-      <p> &copy; 2018 Kisan Ki Dukan. All Rights Reserved</p>
+      <p> &copy; 2018 {{ 'footer.kisan_ki_dukan' | translate }}</p>
     </div>
   </div>
 </div>
