--- a/src/app/customer/component/customer-my-account/customer-my-account.component.html
+++ b/src/app/customer/component/customer-my-account/customer-my-account.component.html
@@ -4,19 +4,19 @@
 
   <ul class="nav nav-tabs nav-justified" id="myTab" role="tablist">
   <li class="nav-item">
-    <a class="nav-link active" data-toggle="tab" href="#home" role="tab" aria-controls="home">My Orders</a>
+    <a class="nav-link active" data-toggle="tab" href="#home" role="tab" aria-controls="home">{{ 'customer_my_account.my_orders' | translate }}</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link " data-toggle="tab" href="#profile" role="tab" aria-controls="profile">Previous Orders</a>
+    <a class="nav-link " data-toggle="tab" href="#profile" role="tab" aria-controls="profile">{{ 'customer_my_account.previous_orders' | translate }}</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" data-toggle="tab" href="#messages" role="tab" aria-controls="messages">Address Book</a>
+    <a class="nav-link" data-toggle="tab" href="#messages" role="tab" aria-controls="messages">{{ 'customer_my_account.address_book' | translate }}</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" data-toggle="tab" href="#settings" role="tab" aria-controls="settings">Change Password</a>
+    <a class="nav-link" data-toggle="tab" href="#settings" role="tab" aria-controls="settings">{{ 'customer_my_account.change_password' | translate }}</a>
   </li>
   <li class="nav-item">
-        <a class="nav-link" data-toggle="tab" href="#settings1" role="tab" aria-controls="settings1">Delete Profile</a>
+        <a class="nav-link" data-toggle="tab" href="#settings1" role="tab" aria-controls="settings1">{{ 'customer_my_account.delete_profile' | translate }}</a>
       </li>
 </ul>
 
@@ -31,7 +31,7 @@
         <app-customer-address-book></app-customer-address-book>
   </div>
   <div class="tab-pane change-password" id="settings" role="tabpanel">
-        <h1> Change Password </h1>
+        <h1> {{ 'customer_my_account.change_password' | translate }} </h1>
 
         <form [formGroup]="rForm" (ngSubmit)="onSubmit(rForm.value)">
 
@@ -39,54 +39,54 @@
             <div class="form-group">
 
             <div class = "form-comp-top">
-            <div class = "name"><label for="mobileNumber">Mobile No</label></div>
-            <input type="text"  class="form-control" id="mobileNumber" placeholder="Enter your 10 digit mobile number" formControlName="mobileNumber">
+            <div class = "name"><label for="mobileNumber">{{ 'customer_my_account.mobile_number' | translate }}</label></div>
+            <input type="text"  class="form-control" id="mobileNumber" placeholder="{{ 'customer_my_account.enter_10_digit_mobile_number' | translate }}" formControlName="mobileNumber">
             <div *ngIf="rForm.controls['mobileNumber'].touched && rForm.controls['mobileNumber'].invalid" class="alert">
                     <div *ngIf="rForm.controls['mobileNumber'].hasError('required')">
-                        Mobile Number is required!
+                        {{ 'customer_my_account.mobile_number_required' | translate }}
                     </div>
                 </div>
               </div>
 
               <div class = "form-comp">
-                <div class = "name"><label for="currentPassword">Current Password</label></div>
-              <input  type="password" class="form-control" id="currentPassword" placeholder="Enter current Password" formControlName="currentPassword">
+                <div class = "name"><label for="currentPassword">{{ 'customer_my_account.current_password' | translate }}</label></div>
+              <input  type="password" class="form-control" id="currentPassword" placeholder="{{ 'customer_my_account.enter_current_password' | translate }}" formControlName="currentPassword">
               <div *ngIf="rForm.controls['currentPassword'].touched && rForm.controls['currentPassword'].invalid" class="alert">
                     <div *ngIf="rForm.controls['currentPassword'].hasError('required')">
-                      Password is required!
+                      {{ 'customer_my_account.password_required' | translate }}
                     </div>
                 </div>
               </div>
 
                 <div class = "form-comp">
-                  <div class = "name"><label for="newPassword">New Password</label></div>
-                <input  type="password" class="form-control" id="newPassword" placeholder="Enter new Password" formControlName="newPassword">
+                  <div class = "name"><label for="newPassword">{{ 'customer_my_account.new_password' | translate }}</label></div>
+                <input  type="password" class="form-control" id="newPassword" placeholder="{{ 'customer_my_account.enter_new_password' | translate }}" formControlName="newPassword">
                 <div *ngIf="rForm.controls['newPassword'].touched && rForm.controls['newPassword'].invalid" class="alert">
                         <div *ngIf="rForm.controls['newPassword'].hasError('required')">
-                          New Password is required!
+                          {{ 'customer_my_account.new_password_required' | translate }}
                         </div>
                     </div>
                   </div>
 
 
                   <div class = "form-comp">
-                    <div class = "name"><label for="reenterNewPassword">Re-enter new Password</label></div>
-                  <input  type="password" class="form-control" id="reenterNewPassword" placeholder="Re-enter New Password" formControlName="reenterNewPassword">
+                    <div class = "name"><label for="reenterNewPassword">{{ 'customer_my_account.re-enter_new_password' | translate }}</label></div>
+                  <input  type="password" class="form-control" id="reenterNewPassword" placeholder="{{ 'customer_my_account.re-enter_new_password' | translate }}" formControlName="reenterNewPassword">
                   <div *ngIf="rForm.controls['reenterNewPassword'].touched && rForm.controls['reenterNewPassword'].invalid" class="alert">
                           <div *ngIf="rForm.controls['reenterNewPassword'].hasError('required')">
-                            Re-entering the new Password is required!
+                            {{ 'customer_my_account.re-enter_new_password_required' | translate }}
                           </div>
                       </div>
                     </div></div>
 
                     <div class = form-comp-button>
 
-                        <button  type="submit" class="btn btn-primary" value="Submit Form" [disabled]="!rForm.valid">Submit</button>
+                        <button  type="submit" class="btn btn-primary" value="Submit Form" [disabled]="!rForm.valid">{{ 'customer_my_account.submit' | translate }}</button>
                      </div></div></form>
   </div>
 
         <div class="tab-pane change-password" id="settings1" role="tabpanel">
-                <h1> Delete Profile </h1>
+                <h1> {{ 'customer_my_account.delete_profile' | translate }} </h1>
 
                 <form [formGroup]="rFormDeleteProfile" (ngSubmit)="deleteUser(rFormDeleteProfile.value)">
 
@@ -94,28 +94,28 @@
                     <div class="form-group">
 
                     <div class = "form-comp-top">
-                    <div class = "name"><label for="mobileNumberDeleteProfile">Mobile No</label></div>
-                    <input type="text"  class="form-control" id="mobileNumberDeleteProfile" placeholder="Enter your 10 digit mobile number" formControlName="mobileNumberDeleteProfile">
+                    <div class = "name"><label for="mobileNumberDeleteProfile">{{ 'customer_my_account.mobile_number' | translate }}</label></div>
+                    <input type="text"  class="form-control" id="mobileNumberDeleteProfile" placeholder="{{ 'customer_my_account.enter_10_digit_mobile_number' | translate }}" formControlName="mobileNumberDeleteProfile">
                     <div *ngIf="rFormDeleteProfile.controls['mobileNumberDeleteProfile'].touched && rFormDeleteProfile.controls['mobileNumberDeleteProfile'].invalid" class="alert">
                             <div *ngIf="rFormDeleteProfile.controls['mobileNumberDeleteProfile'].hasError('required')">
-                                Mobile Number is required!
+                                {{ 'customer_my_account.mobile_number_required' | translate }}
                             </div>
                         </div>
                       </div>
 
                       <div class = "form-comp">
-                        <div class = "name"><label for="currentPasswordDeleteProfile">Password</label></div>
-                      <input  type="password" class="form-control" id="currentPasswordDeleteProfile" placeholder="Enter your Password" formControlName="currentPasswordDeleteProfile">
+                        <div class = "name"><label for="currentPasswordDeleteProfile">{{ 'customer_my_account.password' | translate }}</label></div>
+                      <input  type="password" class="form-control" id="currentPasswordDeleteProfile" placeholder="{{ 'customer_my_account.enter_your_password' | translate }}" formControlName="currentPasswordDeleteProfile">
                       <div *ngIf="rFormDeleteProfile.controls['currentPasswordDeleteProfile'].touched && rFormDeleteProfile.controls['currentPasswordDeleteProfile'].invalid" class="alert">
                             <div *ngIf="rFormDeleteProfile.controls['currentPasswordDeleteProfile'].hasError('required')">
-                              Password is required!
+                              {{ 'customer_my_account.password_required' | translate }}
                             </div>
                         </div>
                       </div></div>
 
                       <div class = form-comp-button>
 
-                        <button  type="submit" class="btn btn-primary" value="Submit Form" [disabled]="!rFormDeleteProfile.valid">Submit</button>
+                        <button  type="submit" class="btn btn-primary" value="Submit Form" [disabled]="!rFormDeleteProfile.valid">{{ 'customer_my_account.submit' | translate }}</button>
                      </div></div></form>
         </div>
 </div></div>
