--- a/src/app/farmer/component/farmer-dashboard/farmer-view-product/farmer-view-product.component.html
+++ b/src/app/farmer/component/farmer-dashboard/farmer-view-product/farmer-view-product.component.html
@@ -16,22 +16,22 @@
           <!-- Text -->
           <div class="text-area">
             <p class="card-text">
-              <b>ProductId: </b>{{product.productId}}</p>
+              <b>{{ 'farmer_view_product.productid' | translate }}: </b>{{product.productId}}</p>
             <p class="card-text">
-              <b>Description: </b>{{product.description}}</p>
+              <b>{{ 'farmer_view_product.description' | translate }}: </b>{{product.description}}</p>
             <p class="card-text">
-              <b>Price: </b>{{product.price}}/kg.</p>
+              <b>{{ 'farmer_view_product.price' | translate }}: </b>{{product.price}}/kg.</p>
             <p class="card-text">
-              <b>Bulk Order Price: </b>{{product.bulkOrderPrice}}/kg.</p>
+              <b>{{ 'farmer_view_product.bulk_ordr_price' | translate }}: </b>{{product.bulkOrderPrice}}/kg.</p>
             <p class="card-text">
-              <b>Quantity: </b>{{product.quantity}} Kg</p>
+              <b>{{ 'farmer_view_product.quantity' | translate }}: </b>{{product.quantity}} Kg</p>
           </div>
           <hr>
           <span>
-            <button type="button" class="btn btn-success" data-toggle="modal" data-target="#exampleModal" (click)="updateProduct(product)">Update</button>
+            <button type="button" class="btn btn-success" data-toggle="modal" data-target="#exampleModal" (click)="updateProduct(product)">{{ 'farmer_view_product.update' | translate }}</button>
           </span>
           <span>
-            <button type="button" class="btn btn-danger" (click)="saveId(product.productId)">Delete</button>
+            <button type="button" class="btn btn-danger" (click)="saveId(product.productId)">{{ 'farmer_view_product.delete' | translate }}</button>
           </span>
         </div>
       </div>
@@ -47,7 +47,7 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Update Product</h5>
+        <h5 class="modal-title" id="exampleModalLabel">{{ 'farmer_view_product.upadte_product' | translate }}</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
@@ -57,29 +57,29 @@
         <form>
           <fieldset disabled>
             <div class="form-group">
-              <label for="productId" class="col-form-label">ProductId:</label>
+              <label for="productId" class="col-form-label">{{ 'farmer_view_product.productid' | translate }}:</label>
               <input type="text" class="form-control" id="productId" name="productId" [(ngModel)]="productId">
             </div>
           </fieldset>
           <div class="form-group">
-            <label for="description" class="col-form-label">Description:</label>
+            <label for="description" class="col-form-label">{{ 'farmer_view_product.description' | translate }}:</label>
             <textarea class="form-control" id="description" name="description" [(ngModel)]="description"></textarea>
           </div>
           <div class="form-group">
-            <label for="price" class="col-form-label">Price:</label>
+            <label for="price" class="col-form-label">{{ 'farmer_view_product.price' | translate }}:</label>
             <input type="text" class="form-control" name="price" id="price" [(ngModel)]="price">
           </div>
           <div class="form-group">
-            <label for="bulkOrderPrice" class="col-form-label">Bulk Order Price:</label>
+            <label for="bulkOrderPrice" class="col-form-label">{{ 'farmer_view_product.bulk_ordr_price' | translate }}:</label>
             <input type="text" class="form-control" name="bulkOrderPrice" [(ngModel)]="bulkOrderPrice">
           </div>
           <div class="form-group">
-            <label for="quantity" class="col-form-label">Quantity:</label>
+            <label for="quantity" class="col-form-label">{{ 'farmer_view_product.quantity' | translate }}:</label>
             <input type="text" class="form-control" name="quantity" [(ngModel)]="quantity">
           </div>
           <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-            <button type="submit" class="btn btn-success" data-dismiss="modal" (click)="updateData()">Update</button>
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">{{ 'farmer_view_product.cancel' | translate }}</button>
+            <button type="submit" class="btn btn-success" data-dismiss="modal" (click)="updateData()">{{ 'farmer_view_product.update' | translate }}</button>
           </div>
         </form>
       </div>
