--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -12,10 +12,9 @@
           <div class="white-shadow col-md-12">
             <div class="row">
               <div class=" col-md-8 white-right">
-                <h4>{{ 'homepage.best_logistic' | translate }}</h4>
-                <p>{{ 'homepage.best_logistic_description' | translate }}</p>
+                <h4>{{ 'homepage.exceptional_customer_service' | translate }}</h4>
+                <p>{{ 'homepage.exceptional_customer_service_description' | translate }}</p>
                 <div class="w3layouts_more-buttn ser-buttn">
-                  <a href="#" data-toggle="modal" data-target="#myModal">{{ 'homepage.read_more' | translate }}</a>
                 </div>
 
               </div>
@@ -33,7 +32,6 @@
                 <h4>{{ 'homepage.best_quality' | translate }}</h4>
                 <p>{{ 'homepage.best_quality_description' | translate }}</p>
                 <div class="w3layouts_more-buttn ser-buttn">
-                  <a href="#" data-toggle="modal" data-target="#myModal">{{ 'homepage.read_more' | translate }}</a>
                 </div>
 
               </div>
@@ -55,7 +53,6 @@
                 <h4>{{ 'homepage.best_products' | translate }}</h4>
                 <p>{{ 'homepage.best_products_description' | translate }}</p>
                 <div class="w3layouts_more-buttn ser-buttn">
-                  <a href="#" data-toggle="modal" data-target="#myModal">{{ 'homepage.read_more' | translate }}</a>
                 </div>
 
               </div>
@@ -70,10 +67,9 @@
           <div class="white-shadow col-md-12">
             <div class="row">
               <div class=" col-md-8 white-right">
-                <h4>{{ 'homepage.best_seeds' | translate }}</h4>
-                <p>{{ 'homepage.best_seeds_description' | translate }}</p>
+                <h4>{{ 'homepage.reliable' | translate }}</h4>
+                <p>{{ 'homepage.reliable_description' | translate }}</p>
                 <div class="w3layouts_more-buttn ser-buttn">
-                  <a href="#" data-toggle="modal" data-target="#myModal">{{ 'homepage.read_more' | translate }}</a>
                 </div>
 
               </div>
@@ -144,27 +140,27 @@
         <div class="img-box">
           <img src="../../../assets/Body/PM_Modi_2015.jpg" alt="">
         </div>
-        <p class="testimonial">We should not forget what was the state of grain production in the country after attaining independence. Our “annadata”
-          has brought us out of the crisis. The country today has a record grain production, record dal, fruit, vegetables
-          and milk production.</p>
+        <p class="testimonial">
+          {{ 'homepage.words_that_matter_description1' | translate }}
+        </p>
         <p class="overview">
-          <b>Narendra Modi</b>, Prime Minister of India</p>
+          <b>{{ 'homepage.words_that_matter_1' | translate }}</b>{{ 'homepage.words_that_matter_position1' | translate }}</p>
       </div>
       <div class="item carousel-item">
         <div class="img-box">
           <img src="../../../assets/Body/fresh.jpg" alt="">
         </div>
-        <p class="testimonial">The diet, to be healthy, has to be mostly fruits, vegetables, beans, nuts and seeds.</p>
+        <p class="testimonial">{{ 'homepage.words_that_matter_description2' | translate }}</p>
         <p class="overview">
-          <b>Joel Fuhrman</b>, American celebrity doctor</p>
+          <b>{{ 'homepage.words_that_matter_2' | translate }}</b>{{ 'homepage.words_that_matter_position2' | translate }}</p>
       </div>
       <div class="item carousel-item">
         <div class="img-box">
           <img src="../../../assets/Body/us.jpg" alt="">
         </div>
-        <p class="testimonial">Cultivators of the Earth are the most virtuous and independent citizens.</p>
+        <p class="testimonial">{{ 'homepage.words_that_matter_description3' | translate }}</p>
         <p class="overview">
-          <b>Thomas Jefferson</b>, 3rd President of the United States</p>
+          <b>{{ 'homepage.words_that_matter_3' | translate }}</b>{{ 'homepage.words_that_matter_position3' | translate }}</p>
       </div>
     </div>
     <!-- Carousel controls -->
