--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -96,8 +96,8 @@
       <h3>
         <i class="fa fa-envelope" aria-hidden="true"></i>{{ 'footer.join_our_newsletter' | translate }}</h3>
       <form action="#" method="post">
-        <input type="email" placeholder="{{ 'footer.enter_your_email' | translate }}" name="email" required="">
-        <input type="submit" value="Subscribe">
+        <input type="email" placeholder="{{ 'footer.enter_your_email' | translate }}" name="email" required="" id="news-input">
+        <input type="submit" value="Subscribe" id="news-button">
       </form>
     </div>
     <div class="clearfix"> </div>
