--- a/src/app/farmer/component/farmer-dashboard/farmer-add-product/farmer-add-product.component.html
+++ b/src/app/farmer/component/farmer-dashboard/farmer-add-product/farmer-add-product.component.html
@@ -1,5 +1,5 @@
-<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-<div clas="mt-100">
+<link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet"> 
+<div clas="">
   <h1> {{ 'farmer_add_product.upload_product' | translate }} </h1>
 <form [formGroup]="rForm" (ngSubmit)="addProduct(rForm.value)">
 
