--- a/src/app/farmer/component/farmer-dashboard/farmer-bank-details/farmer-bank-details.component.html
+++ b/src/app/farmer/component/farmer-dashboard/farmer-bank-details/farmer-bank-details.component.html
@@ -1,4 +1,4 @@
-<div class="mt-100">
+<div class="">
 <h1>{{ 'farmer_bank_details.bank_details' | translate }}</h1>
 
 <form [formGroup]="rForm" (ngSubmit)="addBankDetails(rForm.value)">
