added static member in id-role service for automatic fetch of id and role

--- a/src/app/customer/component/customer-my-account/customer-previous-order/customer-previous-order.component.html
+++ b/src/app/customer/component/customer-my-account/customer-previous-order/customer-previous-order.component.html
@@ -1,6 +1,6 @@
 
    
-  <h1> Previous Orders{{ 'customer_previous_order.previous_orders' | translate }}</h1>
+  <h1>{{ 'customer_previous_order.previous_orders' | translate }}</h1>
   <div class="container-fluid previous-orders">
   <div class="row previous-orders-body">
       <div *ngFor="let order of previousOrders">
