added css for customer-current-orders-component

--- a/src/app/customer/component/customer-my-account/customer-address-book/customer-address-book.component.html
+++ b/src/app/customer/component/customer-my-account/customer-address-book/customer-address-book.component.html
@@ -1,5 +1,5 @@
 <h1>{{ 'customer_address_book.address_details' | translate }}</h1>
-<div class="container-fluid address">
+<div class="container-fluid address bg">
   <div class="row">
     <div *ngIf="details[0]">
       <div *ngFor="let address of details">
