--- a/src/app/customer/component/customer-my-account/customer-previous-order/customer-previous-order.component.html
+++ b/src/app/customer/component/customer-my-account/customer-previous-order/customer-previous-order.component.html
@@ -1,7 +1,7 @@
 
    
   <h1>{{ 'customer_previous_order.previous_orders' | translate }}</h1>
-  <div class="container-fluid previous-orders">
+  <div class="container-fluid previous-orders bg">
   <div class="row previous-orders-body">
       <div *ngFor="let order of previousOrders">
       <div class="col-md-4 cards" >
